# datenight_show_matcher

./: .env.example  .gitignore  Makefile  README.md  REVIEW-PREP.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  api.py  cli.py  config.py  models.py
backend/app/agents/: __init__.py  insta_reader.py  interest_profiler.py  prompts.py  show_matcher.py  streaming_checker.py
backend/app/data/: catalog.json
backend/app/data_access/: __init__.py  catalog.py
backend/app/graph/: __init__.py  pipeline.py
backend/app/llm/: __init__.py  anthropic_client.py  provider.py
backend/app/mcp_server/: __init__.py  client.py  server.py
backend/app/mock_data/: __init__.py  fixtures.py  profiles.py
backend/tests/: conftest.py  test_api.py  test_catalog.py  test_mcp_and_checker.py  test_pipeline.py  test_provider.py  test_real_mode_stubbed.py
docs/: architecture.md  brand.md  contracts.md
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  tsconfig.json  vite-env.d.ts  vite.config.ts
frontend/public/: _headers  robots.txt
frontend/src/: App.tsx  main.tsx  types.ts
frontend/src/api/: client.ts  replay.ts
frontend/src/components/: ExcludedList.tsx  Header.tsx  JsonViewer.tsx  Logo.tsx  ModePill.tsx  Pipeline.tsx  PlatformBadge.tsx  ProfilePicker.tsx  RepickBanner.tsx  Results.tsx  RunButton.tsx  ShowCard.tsx  StageCard.tsx  ThemeToggle.tsx  icons.tsx
frontend/src/demo/: art_girl.json  bookworm_bella.json  fitness_jane.json  tech_babe.json
frontend/src/hooks/: useMode.ts  (+2 more)
(+4 files in other folders)
